2007-08-14  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_ht): Added decoding of Hypertransport MSI mapping capability,
	based on a patch by Jason Gunthorpe.

	* tests/cap-MSI-mapping: Added a test case. I plan to add test cases
	(which are dumps of config space) for all new features.

2007-06-20  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.6.

	* Makefile: Added an "install-lib" target. Thanks to Dan Nicholson
	for a patch.

	* Makefile, lib/Makefile: Generate and install pkg-config file
	for libpci. Again by Dan Nicholson.

2007-06-20  Thomas Schwinge  <tschwinge@gnu.org>

	* lib/i386-io-hurd.h: Rewritten for new Hurd kernels.

2007-05-04  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.5.

	* pci.ids: Updated to the current snapshot of the database.

2007-02-14  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_express): Added PCI/PCI-X to PCI-Express Bridge type.
	Patch by Mark Glines.

2007-02-09  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current snapshot of the database.

2007-02-06  Martin Mares  <mj@ucw.cz>

	* Replaced bzero() by memset() everywhere, it's better to lose a tiny
	bit of readability than maintain hacks to make it work on various systems.

	* lib/configure: tr on Solaris is a bit weird and it requires `[A-Z]'
	instead of `A-Z'. Fortunately, the extra brackets don't hurt otherwise.

	* lib/types.h, lib/configure: Solaris should use <stdint.h> to get precise
	integer types.

2007-02-04  Martin Mares  <mj@ucw.cz>

	* lspci.c: alloca() needs <alloca.h>.

2006-09-17  Martin Mares  <mj@ucw.cz>

	* lib/dump.c: Fixed a couple of bugs in the dump backend which caused
	devices with domains or with extended config space to be read incorrectly.
	Also, dumps with partial lines are allowed now.

2006-09-10  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current database snapshot.

	* lspci.c (scan_device): If an error occurs when reading the standard config
	header of a device, report it and ignore the device and return with exit