@@ -1,3 +1,11 @@
+2007-08-27  Martin Mares  <mj@ucw.cz>
+
+	* lib/names.c (pci_open): When calling gzopen(), use "rb" file mode
+	instead of "r". This is needed on DOS systems, where this function
+	somewhat illogically uses the binary flag for the compressed file
+	instead of the decompressed stream inside, where binariness really
+	matters.
+
 2007-08-14  Martin Mares  <mj@ucw.cz>
 
 	* lspci.c (show_ht): Added decoding of Hypertransport MSI mapping capability,
